--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^5.1.1",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
+    "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "reactstrap": "^8.10.0",
+    "web-vitals": "^1.0.1",
+    "yub": "^0.11.1",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
